# workflow-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  auth_cli.py  claude_service.py  config.py  generate_browser_config.py  main.py  mcp_calling.py  mcp_proxy.py  n8n_credential.py  privacy_policy.html  pyproject.toml  setup.sh  test.sh  test_mcp.py  zip.sh
.claude/: settings.json  settings.local.json
browser-extension/: chat-styles.css  config.js  content.js  manifest.json  page-inject.js  popup.html  popup.js  service-worker.js  test-credentials.js
